--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Candal&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <section class="navigaton">
+      <div class="container">
+        <a href="">
+          <img src="" alt="" />
+          logo
+        </a>
+        <ul>
+          <li>User</li>
+          <li>
+            Heart
+            <span>0</span>
+          </li>
+          <li>
+            Basket
+            <span>0</span>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="hero">
+      <h1>Vital-J Empowering</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+      <button>Buy natural</button>
+    </section>
+  </body>
 </html>
