--- a/html/home.html
+++ b/html/home.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Candal&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/css/home.css" />
   </head>
   <body>
     <section class="navigaton">
