--- a/html/home.html
+++ b/html/home.html
@@ -34,9 +34,11 @@
     </section>
 
     <section class="hero">
-      <h1>Vital-J Empowering</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-      <button>Buy natural</button>
+      <div class="container">
+        <h1>Vital-J Empowering</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <button>Buy natural</button>
+      </div>
     </section>
   </body>
 </html>
