markup 1 home-page.html

--- a/html/home.html
+++ b/html/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Candal&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="/css/home.css" />
   </head>
   <body>
@@ -38,6 +38,120 @@
         <h1>Vital-J Empowering</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         <button>Buy natural</button>
+      </div>
+    </section>
+
+    <section class="collection">
+      <div class="container">
+        <h2>Vital-J Empowering:</h2>
+        <span>Collection, inspired by nature</span>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis
+          fermentum velit. Phasellus tempor lorem eget dui commodo laoreet. Duis
+          vitae malesuada felis, eu gravida felis. Integer et eleifend mi.
+          Vestibulum posuere libero ac ante cursus.
+        </p>
+        <button>Buy now</button>
+        <img src="../img/mountains.jpg" alt="mountains" />
+      </div>
+    </section>
+
+    <section class="exclusive deals">
+      <div class="container">
+        <h2>Preorder now</h2>
+        <span>to receive exclusive deals & gifts</span>
+        <div class="card">
+          <button>Sale</button>
+          <img src="../img/tube.png" alt="tube" />
+          <p>Lorem ipsum dolor sit amet</p>
+          <span>$50</span>
+          <span>$70</span>
+          <button>Add to cart</button>
+        </div>
+
+        <ul class="list">
+          <li class="list-item">
+            <div class="card">
+              <h2>Health essentials</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                laoreet. Duis vitae malesuada felis, eu gravida felis.
+                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
+                Aenean non accumsan sem, nec dapibus odio
+              </p>
+              <img src="../img/jason-briscoe.jpg" alt="ason-briscoe" />
+            </div>
+          </li>
+
+          <li class="list-item">
+            <div class="card">
+              <h2>Dietary supplement</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                laoreet. Duis vitae malesuada felis, eu gravida felis.
+                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
+                Aenean non accumsan sem, nec dapibus odio
+              </p>
+              <img src="../img/pexels-etatics-inc.jpg" alt="pexels-etatics" />
+            </div>
+          </li>
+
+          <li>
+            <div class="card">
+              <h2>Super Cool</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                laoreet. Duis vitae malesuada felis, eu gravida felis.
+                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
+                Aenean non accumsan sem, nec dapibus odio.
+              </p>
+              <img src="../img/pexels-jéshoots.jpg" alt="pexels-jéshoots" />
+            </div>
+          </li>
+
+          <li>
+            <div class="card">
+              <h2>Healthy eating</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                laoreet. Duis vitae malesuada felis, eu gravida felis.
+                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
+                Aenean non accumsan sem, nec dapibus odio
+              </p>
+              <img src="../img/jannis-brandt.jpg" alt="jannis-brandt" />
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="our-blog">
+      <div class="container">
+        <h2>Our blog</h2>
+        <ul class="list">
+          <li class="list-item">
+            <img src="../img/spoons.jpg" alt="spoons" />
+            <h4>Herbal ingredients and their great role in our life</h4>
+            <p>Admin -<span>July 19, 2023</span></p>
+          </li>
+          <li class="list-item">
+            <img src="../img/bad.jpg" alt="bad" />
+            <h4>
+              The opinion of doctors on the effect of herbal ingredients on
+              health
+            </h4>
+            <p>Admin -<span>June 15, 2023</span></p>
+          </li>
+          <li class="list-item">
+            <img src="../img/atleth.jpg" alt="atleth" />
+            <h4>Aminoacids and their role in muscle health</h4>
+            <p>Admin -<span>June 10, 2023</span></p>
+          </li>
+        </ul>
       </div>
     </section>
   </body>
