--- a/html/home.html
+++ b/html/home.html
@@ -11,8 +11,9 @@
     <section class="navigaton">
       <div class="container">
         <a href="">
-          <img src="" alt="" />
-          logo
+          <svg class="logo" width="66px" height="41px">
+            <use href="../img/sprite.svg#icon-logo"></use>
+          </svg>
         </a>
         <ul>
           <li>User</li>
