--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="/html/home.html">Home</a>
+    <a href="./html/home.html">Home</a>
   </body>
 </html>
