styles in to btn

--- a/html/home.html
+++ b/html/home.html
@@ -37,18 +37,22 @@
             <use href="../img/sprite.svg#icon-Search"></use>
           </svg>
 
-          <svg class="Burger" width="24" height="24">
-            <use href="../img/sprite.svg#icon-Burger"></use>
-          </svg>
+          <a>
+            <svg class="Burger" width="24" height="24">
+              <use href="../img/sprite.svg#icon-Burger"></use>
+            </svg>
+          </a>
         </ul>
       </div>
     </section>
 
     <section class="hero">
       <div class="container">
-        <h1 class="title">Vital-J Empowering</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-        <button>Buy natural</button>
+        <h1 class="hero-title">Vital-J Empowering</h1>
+        <p class="hero-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit
+        </p>
+        <button class="btn-header btn">Buy natural</button>
       </div>
     </section>
 
