update styles in css

--- a/html/home.html
+++ b/html/home.html
@@ -33,9 +33,12 @@
             </svg>
             <!-- <span>0</span> -->
           </li>
-          <svg class="Search" width="24" height="24">
-            <use href="../img/sprite.svg#icon-Search"></use>
-          </svg>
+
+          <a>
+            <svg class="Search" width="24" height="24">
+              <use href="../img/sprite.svg#icon-Search"></use>
+            </svg>
+          </a>
 
           <a>
             <svg class="Burger" width="24" height="24">
@@ -52,26 +55,26 @@
         <p class="hero-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit
         </p>
-        <button class="btn-header btn">Buy natural</button>
+        <button class="hero-btn btn">Buy natural</button>
       </div>
     </section>
 
     <section class="collection">
       <div class="container">
-        <h2>Vital-J Empowering:</h2>
-        <span>Collection, inspired by nature</span>
-        <p>
+        <h2 class="collection-title">Vital-J Empowering:</h2>
+        <h4 class="collection-short">Collection, inspired by nature</h4>
+        <p class="collection-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis
           fermentum velit. Phasellus tempor lorem eget dui commodo laoreet. Duis
           vitae malesuada felis, eu gravida felis. Integer et eleifend mi.
           Vestibulum posuere libero ac ante cursus.
         </p>
-        <button>Buy now</button>
+        <button class="collection-btn btn">Buy now</button>
         <img src="../img/mountains.jpg" alt="mountains" />
       </div>
     </section>
 
-    <section class="exclusive deals">
+    <section class="exclusive-deals">
       <div class="container">
         <h2>Preorder now</h2>
         <span>to receive exclusive deals & gifts</span>
