--- a/html/home.html
+++ b/html/home.html
@@ -72,7 +72,7 @@
           vitae malesuada felis, eu gravida felis. Integer et eleifend mi.
           Vestibulum posuere libero ac ante cursus.
         </p>
-        <button class="collection-btn btn">Buy now</button>
+        <button class="collection-btn btn" type="button">Buy now</button>
         <img src="../img/mountains.jpg" alt="mountains" />
       </div>
     </section>
@@ -93,18 +93,18 @@
 
           <span class="card-price">$50</span>
           <span class="card-price sale">$70</span>
-          <button>
+          <button type="button">
             <svg class="heart" width="24" height="24">
               <use href="../img/sprite.svg#icon-Heart"></use>
             </svg>
           </button>
-          <button>
+          <button type="button">
             <svg class="icon-Solid" width="24" height="24">
               <use href="../img/sprite.svg#icon-Solid"></use>
             </svg>
           </button>
 
-          <button class="card-add">Add to cart</button>
+          <button class="card-add" type="button">Add to cart</button>
         </div>
 
         <ul class="list">
