--- a/html/home.html
+++ b/html/home.html
@@ -83,28 +83,54 @@
         <h4 class="exclusive-deals-subtitle">
           to receive exclusive deals & gifts
         </h4>
-        <div class="card-container">
-          <div class="card-sale">
-            <span class="card-sale-text">Sale</span>
+        <div class="card-wraper">
+          <div class="card-container active">
+            <div class="card-sale">
+              <span class="card-sale-text">Sale</span>
+            </div>
+
+            <img class="card-img" src="../img/tube.png" alt="tube" />
+            <p class="card-text">Lorem ipsum dolor sit amet</p>
+
+            <span class="card-price">$50</span>
+            <span class="card-price sale">$70</span>
+            <button type="button">
+              <svg class="heart" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Heart"></use>
+              </svg>
+            </button>
+            <button type="button">
+              <svg class="icon-Solid" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Solid"></use>
+              </svg>
+            </button>
+
+            <button class="card-add" type="button">Add to cart</button>
           </div>
 
-          <img class="card-img" src="../img/tube.png" alt="tube" />
-          <p class="card-text">Lorem ipsum dolor sit amet</p>
+          <div class="card-container">
+            <div class="card-sale">
+              <span class="card-sale-text">Sale</span>
+            </div>
 
-          <span class="card-price">$50</span>
-          <span class="card-price sale">$70</span>
-          <button type="button">
-            <svg class="heart" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Heart"></use>
-            </svg>
-          </button>
-          <button type="button">
-            <svg class="icon-Solid" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Solid"></use>
-            </svg>
-          </button>
+            <img class="card-img" src="../img/tube.png" alt="tube" />
+            <p class="card-text">Lorem ipsum dolor sit amet</p>
 
-          <button class="card-add" type="button">Add to cart</button>
+            <span class="card-price">$50</span>
+            <span class="card-price sale">$70</span>
+            <button type="button">
+              <svg class="heart" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Heart"></use>
+              </svg>
+            </button>
+            <button type="button">
+              <svg class="icon-Solid" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Solid"></use>
+              </svg>
+            </button>
+
+            <button class="card-add" type="button">Add to cart</button>
+          </div>
         </div>
 
         <ul class="list">
