replace style in section cards

--- a/html/home.html
+++ b/html/home.html
@@ -105,7 +105,7 @@
               </svg>
             </button>
 
-            <button class="card-add" type="button">Add to cart</button>
+            <button class="btn-card-add btn" type="button">Add to cart</button>
           </div>
 
           <div class="card-container">
@@ -114,22 +114,22 @@
             </div>
 
             <img class="card-img" src="../img/tube.png" alt="tube" />
-            <p class="card-text">Lorem ipsum dolor sit amet</p>
+            <p class="card-text">Lorem</p>
 
-            <span class="card-price">$50</span>
-            <span class="card-price sale">$70</span>
-            <button type="button">
+            <span class="card-price">$80</span>
+
+            <button class="btn-hiden" type="button">
               <svg class="heart" width="24" height="24">
                 <use href="../img/sprite.svg#icon-Heart"></use>
               </svg>
             </button>
-            <button type="button">
+            <button class="btn-hiden" type="button">
               <svg class="icon-Solid" width="24" height="24">
                 <use href="../img/sprite.svg#icon-Solid"></use>
               </svg>
             </button>
 
-            <button class="card-add" type="button">Add to cart</button>
+            <button class="btn-card-add btn" type="button">Add to cart</button>
           </div>
         </div>
 
