--- a/html/home.html
+++ b/html/home.html
@@ -92,18 +92,25 @@
             <img class="card-img" src="../img/tube.png" alt="tube" />
             <p class="card-text">Lorem ipsum dolor sit amet</p>
 
-            <span class="card-price">$50</span>
-            <span class="card-price sale">$70</span>
-            <button type="button">
-              <svg class="heart" width="24" height="24">
-                <use href="../img/sprite.svg#icon-Heart"></use>
-              </svg>
-            </button>
-            <button type="button">
-              <svg class="icon-Solid" width="24" height="24">
-                <use href="../img/sprite.svg#icon-Solid"></use>
-              </svg>
-            </button>
+            <div class="card-price-container">
+              <div class="price-container">
+                <span class="card-price">$50</span>
+                <span class="card-price sale">$70</span>
+              </div>
+
+              <div class="button-container">
+                <button type="button" class="button-heart">
+                  <svg class="heart" width="24" height="24">
+                    <use href="../img/sprite.svg#icon-Heart"></use>
+                  </svg>
+                </button>
+                <button type="button" class="button-solid">
+                  <svg class="icon-Solid" width="24" height="24">
+                    <use href="../img/sprite.svg#icon-Solid"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
 
             <button class="btn-card-add btn" type="button">Add to cart</button>
           </div>
