--- a/html/home.html
+++ b/html/home.html
@@ -123,18 +123,20 @@
             <img class="card-img" src="../img/tube.png" alt="tube" />
             <p class="card-text">Lorem</p>
 
-            <span class="card-price">$80</span>
+            <div class="card-price-container">
+              <span class="card-price">$80</span>
 
-            <button class="btn-hiden" type="button">
-              <svg class="heart" width="24" height="24">
-                <use href="../img/sprite.svg#icon-Heart"></use>
-              </svg>
-            </button>
-            <button class="btn-hiden" type="button">
-              <svg class="icon-Solid" width="24" height="24">
-                <use href="../img/sprite.svg#icon-Solid"></use>
-              </svg>
-            </button>
+              <button class="btn-hiden" type="button">
+                <svg class="heart" width="24" height="24">
+                  <use href="../img/sprite.svg#icon-Heart"></use>
+                </svg>
+              </button>
+              <button class="btn-hiden" type="button">
+                <svg class="icon-Solid" width="24" height="24">
+                  <use href="../img/sprite.svg#icon-Solid"></use>
+                </svg>
+              </button>
+            </div>
 
             <button class="btn-card-add btn" type="button">Add to cart</button>
           </div>
@@ -143,7 +145,7 @@
         <ul class="list">
           <li class="list-item">
             <div class="card">
-              <h2>Health essentials</h2>
+              <h2 class="list-title">Health essentials</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
@@ -157,7 +159,7 @@
 
           <li class="list-item">
             <div class="card">
-              <h2>Dietary supplement</h2>
+              <h2 class="list-title">Dietary supplement</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
@@ -171,7 +173,7 @@
 
           <li class="list-item">
             <div class="card">
-              <h2>Super Cool</h2>
+              <h2 class="list-title">Super Cool</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
@@ -185,7 +187,7 @@
 
           <li class="list-item">
             <div class="card">
-              <h2>Healthy eating</h2>
+              <h2 class="list-title">Healthy eating</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
