update style in exlusive-deals section and

--- a/html/home.html
+++ b/html/home.html
@@ -146,7 +146,7 @@
           <li class="list-item">
             <div class="card">
               <h2 class="list-title">Health essentials</h2>
-              <p>
+              <p class="collection-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
                 laoreet. Duis vitae malesuada felis, eu gravida felis.
@@ -160,7 +160,7 @@
           <li class="list-item">
             <div class="card">
               <h2 class="list-title">Dietary supplement</h2>
-              <p>
+              <p class="collection-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
                 laoreet. Duis vitae malesuada felis, eu gravida felis.
@@ -174,7 +174,7 @@
           <li class="list-item">
             <div class="card">
               <h2 class="list-title">Super Cool</h2>
-              <p>
+              <p class="collection-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
                 laoreet. Duis vitae malesuada felis, eu gravida felis.
@@ -188,7 +188,7 @@
           <li class="list-item">
             <div class="card">
               <h2 class="list-title">Healthy eating</h2>
-              <p>
+              <p class="collection-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
                 laoreet. Duis vitae malesuada felis, eu gravida felis.
@@ -204,25 +204,35 @@
 
     <section class="our-blog">
       <div class="container">
-        <h2>Our blog</h2>
+        <h2 class="our-blog-title">Our blog</h2>
         <ul class="list">
           <li class="list-item">
             <img src="../img/spoons.jpg" alt="spoons" />
-            <h4>Herbal ingredients and their great role in our life</h4>
-            <p>Admin -<span>July 19, 2023</span></p>
+            <h4 class="our-blog-subtitle">
+              Herbal ingredients and their great role in our life
+            </h4>
+            <p class="our-blog-text">
+              Admin &#8211; <span class="our-blog-subtext">July 19, 2023</span>
+            </p>
           </li>
           <li class="list-item">
             <img src="../img/bad.jpg" alt="bad" />
-            <h4>
+            <h4 class="our-blog-subtitle">
               The opinion of doctors on the effect of herbal ingredients on
               health
             </h4>
-            <p>Admin -<span>June 15, 2023</span></p>
+            <p class="our-blog-text">
+              Admin &#8211; <span class="our-blog-subtext">June 15, 2023</span>
+            </p>
           </li>
           <li class="list-item">
             <img src="../img/atleth.jpg" alt="atleth" />
-            <h4>Aminoacids and their role in muscle health</h4>
-            <p>Admin -<span>June 10, 2023</span></p>
+            <h4 class="our-blog-subtitle">
+              Aminoacids and their role in muscle health
+            </h4>
+            <p class="our-blog-text">
+              Admin &#8211; <span class="our-blog-subtext">June 10, 2023</span>
+            </p>
           </li>
         </ul>
       </div>
