edit from footer styles

--- a/html/home.html
+++ b/html/home.html
@@ -245,42 +245,50 @@
             <use href="../img/sprite.svg#icon-logo"></use>
           </svg>
         </a>
-        <ul class="list">
-          <li class="list-item"><a href="#">Home</a></li>
-          <li class="list-item"><a href="#">About us</a></li>
-          <li class="list-item"><a href="#">Contact us</a></li>
-          <li class="list-item"><a href="#">FAQ</a></li>
-          <li class="list-item"><a href="#">Privacy policy</a></li>
-        </ul>
 
-        <div class="social-networks">
-          <h4>Get in touch</h4>
-          <ul class="list">
+        <div class="footer-wrapper">
+          <ul class="list footer-list">
+            <li class="list-item"><a class="footer-link" href="#">Home</a></li>
             <li class="list-item">
-              <a href="./home.html">
-                <svg class="facebook" width="24px" height="24px">
-                  <use href="../img/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
+              <a class="footer-link" href="#">About us</a>
             </li>
             <li class="list-item">
-              <a href="./home.html">
-                <svg class="twiter" width="24px" height="24px">
-                  <use href="../img/sprite.svg#icon-tweeter"></use>
-                </svg>
-              </a>
+              <a class="footer-link" href="#">Contact us</a>
             </li>
+            <li class="list-item"><a class="footer-link" href="#">FAQ</a></li>
             <li class="list-item">
-              <a href="./home.html">
-                <svg class="instagram" width="24px" height="24px">
-                  <use href="../img/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
+              <a class="footer-link" href="#">Privacy policy</a>
             </li>
           </ul>
+          <div class="social-networks">
+            <h4 class="footer-link">Get in touch</h4>
+            <ul class="list footer-list-networks">
+              <li class="footer-list-item">
+                <a href="./home.html">
+                  <svg class="facebook" width="24px" height="24px">
+                    <use href="../img/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a href="./home.html">
+                  <svg class="twiter" width="24px" height="24px">
+                    <use href="../img/sprite.svg#icon-tweeter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a href="./home.html">
+                  <svg class="instagram" width="24px" height="24px">
+                    <use href="../img/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <ul class="list">
-          <li class="list-item">
+        <ul class="list list-social">
+          <li class="list-social-item">
             <a href="#"
               ><svg
                 width="39"
@@ -346,7 +354,7 @@
                 </defs></svg
             ></a>
           </li>
-          <li class="list-item">
+          <li class="list-social-item">
             <a href="#"
               ><svg
                 width="39"
@@ -413,7 +421,7 @@
               </svg>
             </a>
           </li>
-          <li class="list-item">
+          <li class="list-social-item">
             <a href="#"
               ><svg
                 width="39"
@@ -492,7 +500,7 @@
               </svg>
             </a>
           </li>
-          <li class="list-item">
+          <li class="list-social-item">
             <a href="#"
               ><svg
                 width="39"
@@ -581,7 +589,7 @@
               </svg>
             </a>
           </li>
-          <li class="list-item">
+          <li class="list-social-item">
             <a href="#"
               ><svg
                 width="39"
