exlusive-deas_cut the paragraf text

--- a/html/home.html
+++ b/html/home.html
@@ -121,7 +121,7 @@
             </div>
 
             <img class="card-img" src="../img/tube.png" alt="tube" />
-            <p class="card-text">Lorem</p>
+            <p class="card-text">Lorem ipsum dolor sit amet</p>
 
             <div class="card-price-container">
               <span class="card-price">$80</span>
@@ -657,7 +657,9 @@
             </a>
           </li>
         </ul>
-        <p>&#169; 2023 - Vital-J-Empowering.All rights reserved!</p>
+        <p class="footter-text">
+          &#169; 2023 - Vital-J-Empowering.All rights reserved!
+        </p>
       </div>
     </footer>
   </body>
