upload navigation top-icon

--- a/html/home.html
+++ b/html/home.html
@@ -12,6 +12,30 @@
   </head>
   <body>
     <section class="navigaton">
+      <div class="navigation-top">
+        <div class="container">
+          <svg class="account" width="24" height="24">
+            <use href="../img/sprite.svg#icon-Time-iPhone"></use>
+          </svg>
+          <ul class="navigation-top__list">
+            <li class="navigation-top__list-item">
+              <svg class="account" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Cellular-Connection"></use>
+              </svg>
+            </li>
+            <li class="navigation-top__list-item">
+              <svg class="account" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Wifi"></use>
+              </svg>
+            </li>
+            <li class="navigation-top__list-item">
+              <svg class="account" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Battery"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="container container-flex">
         <a href="./home.html">
           <svg class="logo" width="66" height="41">
