--- a/html/home.html
+++ b/html/home.html
@@ -13,10 +13,8 @@
   <body>
     <section class="navigaton">
       <div class="navigation-top">
-        <div class="container">
-          <svg class="account" width="24" height="24">
-            <use href="../img/sprite.svg#icon-Time-iPhone"></use>
-          </svg>
+        <div class="container container-flex">
+          <span class="navigation-top__time">9:41</span>
           <ul class="navigation-top__list">
             <li class="navigation-top__list-item">
               <svg class="account" width="24" height="24">
