make span number

--- a/html/home.html
+++ b/html/home.html
@@ -13,7 +13,7 @@
   <body>
     <section class="navigaton">
       <div class="navigation-top">
-        <div class="container container-flex">
+        <div class="container container-flex top">
           <span class="navigation-top__time">9:41</span>
           <ul class="navigation-top__list">
             <li class="navigation-top__list-item">
@@ -47,16 +47,20 @@
             </svg>
           </li>
           <li class="list-item">
-            <svg class="Heart" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Heart"></use>
-            </svg>
-            <!-- <span>0</span> -->
+            <a class="list-item__link" href="#">
+              <svg class="Heart" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Heart"></use>
+              </svg>
+              <span class="list-item__number">0</span>
+            </a>
           </li>
           <li class="list-item">
-            <svg class="basket" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Shopping-basket"></use>
-            </svg>
-            <!-- <span>0</span> -->
+            <a class="list-item__link" href="#">
+              <svg class="basket" width="24" height="24">
+                <use href="../img/sprite.svg#icon-Shopping-basket"></use>
+              </svg>
+              <span class="list-item__number">0</span>
+            </a>
           </li>
 
           <a>
