--- a/html/home.html
+++ b/html/home.html
@@ -14,7 +14,7 @@
     <section class="navigaton">
       <div class="navigation-top">
         <div class="container container-flex top">
-          <span class="navigation-top__time">9:41</span>
+          <span class="navigation-top__time"><time>9:41</time></span>
           <ul class="navigation-top__list">
             <li class="navigation-top__list-item">
               <svg class="account" width="24" height="24">
