make without mistakes

--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
-    <section class="navigaton">
+    <section class="navigation">
       <div class="navigation-top">
         <div class="container container-flex top">
           <span class="navigation-top__time"><time>9:41</time></span>
@@ -109,7 +109,7 @@
         <h4 class="exclusive-deals-subtitle">
           to receive exclusive deals & gifts
         </h4>
-        <div class="card-wraper">
+        <div class="card-wrapper">
           <div class="card-container active">
             <div class="card-sale">
               <span class="card-sale-text">Sale</span>
