--- a/html/home.html
+++ b/html/home.html
@@ -35,16 +35,22 @@
         </div>
       </div>
       <div class="container container-flex">
-        <a href="./home.html">
+        <a class="navigation-logo" href="./home.html">
           <svg class="logo" width="66" height="41">
             <use href="../img/sprite.svg#icon-logo"></use>
           </svg>
         </a>
-        <input
-          class="navigation-search"
-          type="search"
-          placeholder="I search..."
-        />
+        <span class="navigation-search-container">
+          <input
+            class="navigation-search"
+            type="search"
+            placeholder="I search..."
+          />
+          <svg class="search-icon" width="17.4" height="17.4">
+            <use href="../img/sprite.svg#icon-Search"></use>
+          </svg>
+        </span>
+
         <ul class="list navigaton-list">
           <li class="list-item">
             <svg class="account" width="24" height="24">
@@ -68,7 +74,7 @@
             </a>
           </li>
 
-          <a>
+          <a class="navigation-search-link">
             <svg class="Search" width="24" height="24">
               <use href="../img/sprite.svg#icon-Search"></use>
             </svg>
