input style search

--- a/html/home.html
+++ b/html/home.html
@@ -43,8 +43,10 @@
         <span class="navigation-search-container">
           <input
             class="navigation-search"
+            name="search"
             type="search"
             placeholder="I search..."
+            minlength="2"
           />
           <svg class="search-icon" width="17.4" height="17.4">
             <use href="../img/sprite.svg#icon-Search"></use>
