added media in to colection section

--- a/html/home.html
+++ b/html/home.html
@@ -103,16 +103,22 @@
 
     <section class="collection">
       <div class="container">
-        <h2 class="collection-title">Vital-J Empowering:</h2>
-        <h4 class="collection-short">Collection, inspired by nature</h4>
-        <p class="collection-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis
-          fermentum velit. Phasellus tempor lorem eget dui commodo laoreet. Duis
-          vitae malesuada felis, eu gravida felis. Integer et eleifend mi.
-          Vestibulum posuere libero ac ante cursus.
-        </p>
-        <button class="collection-btn btn" type="button">Buy now</button>
-        <img src="../img/mountains.jpg" alt="mountains" />
+        <div class="colection-wrapper">
+          <h2 class="collection-title">Vital-J Empowering:</h2>
+          <h4 class="collection-short">Collection, inspired by nature</h4>
+          <div class="colection-text-btn">
+            <div class="wrapper-text">
+              <p class="collection-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                laoreet. Duis vitae malesuada felis, eu gravida felis. Integer
+                et eleifend mi. Vestibulum posuere libero ac ante cursus.
+              </p>
+              <button class="collection-btn btn" type="button">Buy now</button>
+            </div>
+            <img src="../img/mountains.jpg" alt="mountains" />
+          </div>
+        </div>
       </div>
     </section>
 
