added pseudo-element backgroud section colections

--- a/html/home.html
+++ b/html/home.html
@@ -107,6 +107,11 @@
           <h2 class="collection-title">Vital-J Empowering:</h2>
           <h4 class="collection-short">Collection, inspired by nature</h4>
           <div class="colection-text-btn">
+            <img
+              class="collection-img"
+              src="../img/background/fruts.jpeg"
+              alt="fruts"
+            />
             <div class="wrapper-text">
               <p class="collection-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
