correction of errors in the section collection

--- a/html/home.html
+++ b/html/home.html
@@ -109,11 +109,11 @@
           <div class="colection-text-btn">
             <img
               class="collection-img"
-              src="../img/background/fruts.jpeg"
+              src="../img/background/fruts.png"
               alt="fruts"
             />
             <div class="wrapper-text">
-              <p class="collection-text">
+              <p class="collection-text wrapper">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
                 quis fermentum velit. Phasellus tempor lorem eget dui commodo
                 laoreet. Duis vitae malesuada felis, eu gravida felis. Integer
@@ -121,7 +121,11 @@
               </p>
               <button class="collection-btn btn" type="button">Buy now</button>
             </div>
-            <img src="../img/mountains.jpg" alt="mountains" />
+            <img
+              class="collection-picture"
+              src="../img/mountains.jpg"
+              alt="mountains"
+            />
           </div>
         </div>
       </div>
