update media from list-item

--- a/html/home.html
+++ b/html/home.html
@@ -67,7 +67,7 @@
               <span class="list-item__number">0</span>
             </a>
           </li>
-          <li class="list-item">
+          <li class="list-item last">
             <a class="list-item__link" href="#">
               <svg class="basket" width="24" height="24">
                 <use href="../img/sprite.svg#icon-Shopping-basket"></use>
