--- a/html/home.html
+++ b/html/home.html
@@ -82,8 +82,8 @@
             </svg>
           </a>
 
-          <a>
-            <svg class="Burger" width="24" height="24">
+          <a class="burger-btn">
+            <svg class="Burger-icon" width="24" height="24">
               <use href="../img/sprite.svg#icon-Burger"></use>
             </svg>
           </a>
