adaptive with colection section

--- a/html/home.html
+++ b/html/home.html
@@ -133,6 +133,11 @@
 
     <section class="exclusive-deals">
       <div class="container">
+        <img
+          class="exclusive-deals-picture"
+          src="../img/background/straberys.png"
+          alt="straberys"
+        />
         <h2 class="exclusive-deals-title">Preorder now</h2>
         <h4 class="exclusive-deals-subtitle">
           to receive exclusive deals & gifts
