--- a/html/home.html
+++ b/html/home.html
@@ -185,12 +185,12 @@
             <div class="card-price-container">
               <span class="card-price">$80</span>
 
-              <button class="btn-hiden" type="button">
+              <button class="btn-card hidden" type="button">
                 <svg class="heart" width="24" height="24">
                   <use href="../img/sprite.svg#icon-Heart"></use>
                 </svg>
               </button>
-              <button class="btn-hiden" type="button">
+              <button class="btn-card hidden" type="button">
                 <svg class="icon-Solid" width="24" height="24">
                   <use href="../img/sprite.svg#icon-Solid"></use>
                 </svg>
