corect section card

--- a/html/home.html
+++ b/html/home.html
@@ -204,56 +204,64 @@
         <ul class="list">
           <li class="list-item">
             <div class="card">
-              <h2 class="list-title">Health essentials</h2>
-              <p class="collection-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                quis fermentum velit. Phasellus tempor lorem eget dui commodo
-                laoreet. Duis vitae malesuada felis, eu gravida felis.
-                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
-                Aenean non accumsan sem, nec dapibus odio
-              </p>
+              <div class="card-wrapper-item">
+                <h2 class="list-title">Health essentials</h2>
+                <p class="collection-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                  laoreet. Duis vitae malesuada felis, eu gravida felis.
+                  Vestibulum posuere libero ac ante cursus, ac ornare est
+                  pretium. Aenean non accumsan sem, nec dapibus odio
+                </p>
+              </div>
               <img src="../img/jason-briscoe.jpg" alt="ason-briscoe" />
             </div>
           </li>
 
           <li class="list-item">
             <div class="card">
-              <h2 class="list-title">Dietary supplement</h2>
-              <p class="collection-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                quis fermentum velit. Phasellus tempor lorem eget dui commodo
-                laoreet. Duis vitae malesuada felis, eu gravida felis.
-                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
-                Aenean non accumsan sem, nec dapibus odio
-              </p>
+              <div class="card-wrapper-item">
+                <h2 class="list-title">Dietary supplement</h2>
+                <p class="collection-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                  laoreet. Duis vitae malesuada felis, eu gravida felis.
+                  Vestibulum posuere libero ac ante cursus, ac ornare est
+                  pretium. Aenean non accumsan sem, nec dapibus odio
+                </p>
+              </div>
               <img src="../img/pexels-etatics-inc.jpg" alt="pexels-etatics" />
             </div>
           </li>
 
           <li class="list-item">
             <div class="card">
-              <h2 class="list-title">Super Cool</h2>
-              <p class="collection-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                quis fermentum velit. Phasellus tempor lorem eget dui commodo
-                laoreet. Duis vitae malesuada felis, eu gravida felis.
-                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
-                Aenean non accumsan sem, nec dapibus odio.
-              </p>
+              <div class="card-wrapper-item">
+                <h2 class="list-title">Super Cool</h2>
+                <p class="collection-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                  laoreet. Duis vitae malesuada felis, eu gravida felis.
+                  Vestibulum posuere libero ac ante cursus, ac ornare est
+                  pretium. Aenean non accumsan sem, nec dapibus odio.
+                </p>
+              </div>
               <img src="../img/pexels-jéshoots.jpg" alt="pexels-jéshoots" />
             </div>
           </li>
 
           <li class="list-item">
             <div class="card">
-              <h2 class="list-title">Healthy eating</h2>
-              <p class="collection-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                quis fermentum velit. Phasellus tempor lorem eget dui commodo
-                laoreet. Duis vitae malesuada felis, eu gravida felis.
-                Vestibulum posuere libero ac ante cursus, ac ornare est pretium.
-                Aenean non accumsan sem, nec dapibus odio
-              </p>
+              <div class="card-wrapper-item">
+                <h2 class="list-title">Healthy eating</h2>
+                <p class="collection-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  quis fermentum velit. Phasellus tempor lorem eget dui commodo
+                  laoreet. Duis vitae malesuada felis, eu gravida felis.
+                  Vestibulum posuere libero ac ante cursus, ac ornare est
+                  pretium. Aenean non accumsan sem, nec dapibus odio
+                </p>
+              </div>
               <img src="../img/jannis-brandt.jpg" alt="jannis-brandt" />
             </div>
           </li>
