--- a/html/home.html
+++ b/html/home.html
@@ -203,7 +203,7 @@
 
         <ul class="list">
           <li class="list-item">
-            <div class="card">
+            <div class="card reverse">
               <div class="card-wrapper-item">
                 <h2 class="list-title">Health essentials</h2>
                 <p class="collection-text">
@@ -214,7 +214,11 @@
                   pretium. Aenean non accumsan sem, nec dapibus odio
                 </p>
               </div>
-              <img src="../img/jason-briscoe.jpg" alt="ason-briscoe" />
+              <img
+                class="list-card-img"
+                src="../img/jason-briscoe.jpg"
+                alt="ason-briscoe"
+              />
             </div>
           </li>
 
@@ -230,12 +234,16 @@
                   pretium. Aenean non accumsan sem, nec dapibus odio
                 </p>
               </div>
-              <img src="../img/pexels-etatics-inc.jpg" alt="pexels-etatics" />
+              <img
+                class="list-card-img"
+                src="../img/pexels-etatics-inc.jpg"
+                alt="pexels-etatics"
+              />
             </div>
           </li>
 
           <li class="list-item">
-            <div class="card">
+            <div class="card reverse">
               <div class="card-wrapper-item">
                 <h2 class="list-title">Super Cool</h2>
                 <p class="collection-text">
@@ -246,7 +254,11 @@
                   pretium. Aenean non accumsan sem, nec dapibus odio.
                 </p>
               </div>
-              <img src="../img/pexels-jéshoots.jpg" alt="pexels-jéshoots" />
+              <img
+                class="list-card-img"
+                src="../img/pexels-jéshoots.jpg"
+                alt="pexels-jéshoots"
+              />
             </div>
           </li>
 
@@ -262,7 +274,11 @@
                   pretium. Aenean non accumsan sem, nec dapibus odio
                 </p>
               </div>
-              <img src="../img/jannis-brandt.jpg" alt="jannis-brandt" />
+              <img
+                class="list-card-img"
+                src="../img/jannis-brandt.jpg"
+                alt="jannis-brandt"
+              />
             </div>
           </li>
         </ul>
