update list section cards

--- a/html/home.html
+++ b/html/home.html
@@ -201,7 +201,7 @@
           </div>
         </div>
 
-        <ul class="list">
+        <ul class="list list-wrapper">
           <li class="list-item">
             <div class="card reverse">
               <div class="card-wrapper-item">
