make mistakes with selectors

--- a/html/home.html
+++ b/html/home.html
@@ -53,7 +53,7 @@
           </svg>
         </span>
 
-        <ul class="list navigaton-list">
+        <ul class="list navigation-list">
           <li class="list-item">
             <svg class="account" width="24" height="24">
               <use href="../img/sprite.svg#icon-Account"></use>
@@ -110,7 +110,7 @@
             <img
               class="collection-img"
               src="../img/background/fruts.png"
-              alt="fruts"
+              alt="fruits"
             />
             <div class="wrapper-text">
               <p class="collection-text wrapper">
